Fixed alignment of page elements after EEA template changes. References #27694

--- a/web/src/main/webapp/css/eunis.css
+++ b/web/src/main/webapp/css/eunis.css
@@ -539,7 +539,7 @@ div.overlay .formControls a {
 .homepage-content .species_qs,
 .homepage-content .habitats_qs,
 .homepage-content .sites_qs {
-  width: 600px;
+  width: 670px;
 }
 
 .homepage-content .combined-search-area {
